envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match: { prefix: "/" }
                route: { cluster: ddns_service }
          http_filters:
          - name: envoy.router
  clusters:
  - name: ddns_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: v4_only
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: service
        port_value: 8000
